--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,6 @@
 .signin-dimensions {
    @apply w-3/4 md:w-7/12 lg:w-1/2 xl:w-1/3;
 }
+.btn-primary-color {
+   @apply bg-blue-900 hover:bg-blue-800 focus:bg-blue-800 active:bg-blue-700;
+}
