--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.signin-input {
+.input-style {
    @apply p-4 border-2 bg-transparent backdrop-brightness-150 text-white border-slate-700 focus:border-slate-600 active:border-rose-500;
 }
 
